@@ -9,7 +9,7 @@ http://pear.php.net/dtd/package-2.0.xsd">
 
  <description>
 Use the OCI8 extension to access Oracle Database. PHP OCI8 2.1 builds
-with PHP 7.  Use 'pecl install oci8-2.0.11' to install OCI8 for PHP
+with PHP 7.  Use 'pecl install oci8-2.0.12' to install OCI8 for PHP
 5.2 - PHP 5.6.  Use 'pecl install oci8-1.4.10' to install PHP OCI8 1.4
 for PHP 4.3.9 - PHP 5.1.  The OCI8 extension can be linked with Oracle
 client libraries from Oracle Database 12.1, 11, or 10.2.  These
@@ -46,12 +46,12 @@ Interoperability Support" (ID 207303.1) for details.
   <active>no</active>
  </lead>
 
- <date>2016-04-15</date>
+ <date>2016-07-04</date>
  <time>12:00:00</time>
 
   <version>
-   <release>2.0.11</release>
-   <api>2.0.11</api>
+   <release>2.0.12</release>
+   <api>2.0.12</api>
   </version>
   <stability>
    <release>stable</release>
@@ -59,7 +59,7 @@ Interoperability Support" (ID 207303.1) for details.
   </stability>
   <license uri="http://www.php.net/license">PHP</license>
   <notes>
-Fixed bug #71422 (Fix ORA-01438: value larger than specified precision allowed for this column)
+Fixed invalid handle error with Implicit Result Sets
   </notes>
  <contents>
   <dir name="/">
@@ -464,6 +464,21 @@ Fixed bug #71422 (Fix ORA-01438: value larger than specified precision allowed f
   <configureoption default="autodetect" name="with-oci8" prompt="Please provide the path to the ORACLE_HOME directory. Use &apos;instantclient,/path/to/instant/client/lib&apos; if you&apos;re compiling with Oracle Instant Client" />
  </extsrcrelease>
  <changelog>
+
+<release>
+  <version>
+   <release>2.0.11</release>
+   <api>2.0.11</api>
+  </version>
+  <stability>
+   <release>stable</release>
+   <api>stable</api>
+  </stability>
+  <license uri="http://www.php.net/license">PHP</license>
+  <notes>
+Fixed bug #71422 (Fix ORA-01438: value larger than specified precision allowed for this column)
+  </notes>
+</release>
 
 <release>
   <version>
