@@ -63,6 +63,9 @@ PHP                                                                        NEWS
   . Fixed bug #72710 (`mb_ereg` causes buffer overflow on regexp compile error).
     (ju1ius)
 
+- OCI8:
+  . Fixed invalid handle error with Implicit Result Sets. (Chris Jones)
+
 - PCRE:
   . Fixed bug #72688 (preg_match missing group names in matches). (cmb)
 
